--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
+inventory = inventory/app.gcp.yml
+roles_path = ./roles
 host_key_checking = False
-inventory = hosts
 remote_user = ansible
 private_key_file = /home/gcp-ansible-demo/terraform/ssh-private-key.secrets
