--- a/ansible/roles/db-init/handlers/main.yml
+++ b/ansible/roles/db-init/handlers/main.yml
@@ -4,3 +4,21 @@
     name: mongod
     state: restarted
   become: yes
+
+- name: build app
+  command: npm install
+  args:
+    chdir: ~/app
+
+- name: stop pm2
+  command: pm2 delete all
+  ignore_errors: True
+  become: yes
+  args:
+    chdir: ~/app
+
+- name: start pm2
+  command: pm2 start app.js
+  become: yes
+  args:
+    chdir: ~/app
