--- a/ansible/roles/api-init/tasks/main.yml
+++ b/ansible/roles/api-init/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: Add repos for a group
   apt_repository:
-    repo: deb https://deb.nodesource.com/node_16.x bionic main
+    repo: deb https://deb.nodesource.com/node_16.x jammy main
     state: present
 
 - name: Install NodeJS
