Use proper distro and add UFW.

--- a/ansible/roles/web-init/tasks/main.yml
+++ b/ansible/roles/web-init/tasks/main.yml
@@ -9,12 +9,12 @@
 
 - name: Add repos for a group
   apt_repository:
-    repo: deb https://nginx.org/packages/ubuntu/ bionic nginx
+    repo: deb https://nginx.org/packages/ubuntu/ jammy nginx
     state: present
 
 - name: Install Nginx
   apt:
-    name: nginx=1.20.1-1~bionic
+    name: nginx=1.24.0-1~jammy
     state: present
 
 - name: Render config file
@@ -27,3 +27,35 @@
     name: nginx
     state: started
     enabled: yes
+
+- name: Install UFW
+  apt:
+    name: ufw
+    state: present
+
+- name: Enable UFW on start
+  service:
+    name: ufw
+    state: started
+    enabled: yes
+
+- name: Deny everything and enable UFW
+  ufw:
+    state: enabled
+    policy: deny
+
+- name: Set logging
+  ufw:
+    logging: 'on'
+
+- name: Allow all access to tcp port 22
+  ufw:
+    rule: allow
+    port: '22'
+    proto: tcp
+
+- name: Allow all access to tcp port 80
+  ufw:
+    rule: allow
+    port: '80'
+    proto: tcp
