--- a/ansible/inventory/app.gcp.yml
+++ b/ansible/inventory/app.gcp.yml
@@ -1,9 +1,9 @@
 ---
 plugin: gcp_compute
 projects:
-  - rafael-415807
+  - planhat-test-415609
 auth_kind: serviceaccount
-service_account_file: /home/gcp-ansible-demo/terraform/ansible-test-sa.secrets
+service_account_file: /home/gcp-ansible-demo/terraform/init-project/sa-ansible-key.json.secrets
 keyed_groups:
   - key: tags["items"]
     prefix: tag
