--- a/ansible/app-db/package.json
+++ b/ansible/app-db/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/pubsub": "^2.19.0",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "winston": "^3.11.0"
   }
 }
